# ai-slide-generator

./: .databricksignore  .env.example  .gitignore  .gitleaksignore  ACCESS_CONTROL_SETUP.md  AGENTS.md  BACKEND_SLIDE_EDITING.md  CHATBOT_CONVERSION.md  CLAUDE.md  DATABRICKS_APP_DEPLOYMENT_PLAN.md  DEPLOYMENT_SETUP.md  FRONTEND_IMPLEMENTATION_PLAN.md  FRONTEND_SLIDE_EDITING.md  MLFLOW_TRACING_ISSUE.md  MULTI_TURN_SUMMARY.md  PHASE_1_MVP.md  PHASE_2_ENHANCED_UI.md  PHASE_3_DATABRICKS_DEPLOYMENT.md  PHASE_4_MULTI_SESSION.md  PROJECT_PLAN.md  PROMPT_SUGGESTIONS.md  README.md  README_NEW_STRUCTURE.md  README_PHASE1.md  SETUP_IMPROVEMENTS.md  SLIDE_EDIT_CONTEXT_PLAN.md  SLIDE_PARSER_DESIGN.md  SUGGESTED_PROJECT_STRUCTURE.md  TESTS_AND_FIXES_SUMMARY.md  TEST_CATALOG.md  TEST_MULTI_TURN.md  TEST_RESULTS_SUMMARY.md  VISUAL_CAPTURE_ENHANCEMENT_PLAN.md  ai_slide_generator.db  alembic.ini  app.yaml  deploy.sh  otel_guidance.md  package-lock.json  pptx_to_pdf.py  (+13 more)
.claude/: settings.global.json
.cursor/: mcp.json
.cursor/agents/: databricks-ai-specialist.md  databricks-data-engineering-specialist.md  databricks-deployment-ops-specialist.md  databricks-governance-security-specialist.md  databricks-ml-engineering-specialist.md  databricks-platform-specialist.md
.cursor/docs/: README.md  ai-development.md  data-engineering.md  deployment-ops.md  development-standards.md  governance-security.md  ml-engineering.md  platform.md
.cursor/plans/: explicit-d13926bd.plan.md  html_merge_fixes_a2a18a9a.plan.md  image-search-mlflow-notes.md  mlflow_per-session_experiments_1991e3ac.plan.md  multi-99dce6e4.plan.md  rate-limit-aceb6756.plan.md  slide_editing_features_plan.md  sse-to-polling-migration.md
.cursor/rules/: agents-behaviour.mdc  databricks-lakebase.mdc  databricks-overview.mdc  dev-standards.mdc  directory-structure.mdc  git-rules.mdc  python-dev.mdc  readme-summary.mdc  testing-guidelines.mdc
.github/workflows/: docs-deploy.yml  publish-dev.yml  publish-testpypi.yml  publish.yml  setup-secrets.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_remove_genie_default.py
backend/: main.py
config/: config.example.yaml  config.yaml  deployment.example.yaml  deployment.yaml  lakebase.yaml  mlflow.yaml  prompts.yaml  seed_profiles.yaml
db_app_deployment/: README.md  config.py  deploy.py
docs/: AGENT_IMPLEMENTATION_PLAN.md  CODE_REVIEW_COMPLETION.md  CODE_REVIEW_PLAN.md  CODE_REVIEW_SUMMARY.md  CONFIG_MANAGEMENT_UI_PLAN.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  OPEN_ISSUES.md  PHASE2_MLOPS_ARCHITECTURE.md  TESTING_LIVE.md  TOKEN_OPTIMIZATION_ANALYSIS.md  TOKEN_OPTIMIZATION_SUMMARY.md  TWO_STAGE_CSV_IMPLEMENTATION_PLAN.md  TWO_STAGE_IMPLEMENTATION_PLAN.md  access-control-implementation.md  access-control.md  index.md  local-development.md  script-sync-plan.md  test-claude-review.md
docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/api/: chat.md  export.md  openapi-schema.md  overview.md  sessions.md  settings.md  slides.md  verification.md
docs/backend-database-implementation/: IMPLEMENTATION_STATUS.md  PHASE_1_COMPLETE.md  PHASE_1_DATABASE_SETUP.md  PHASE_2_BACKEND_SERVICES.md  PHASE_2_COMPLETE.md  PHASE_3_API_ENDPOINTS.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_4_SETTINGS_INTEGRATION.md  (+8 more)
examples/: demo_slide_parser.py
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
infra/: config.py  deploy.py
notebooks/: deploy.ipynb
quickstart/: PREREQUISITES.md  QUICKSTART.md  SETUP_REFACTOR_PLAN.md  SETUP_SUMMARY.md  TROUBLESHOOTING.md  check_system_dependencies.sh  create_python_environment.sh  setup.sh  setup_database.sh
scripts/: README.md  __init__.py  build_wheels.sh  deploy_ci.py  deploy_local.py  deploy_local.sh  init_database.py  lakebase_grant_owner_role.py  lakebase_shared_owner_sql.py  lakebase_transfer_ownership.py  migrate_polling_support.sql  publish_pypi.sh  register_model.py  request_log_analysis.sql  rollback_model.py  run_e2e_local.sh  run_migration.py  setup_secrets.sh  tellr_cli.py  test_endpoint.py
src/: README.md  __init__.py
test/: README.md  test_1_llm_html_generation.py  test_2_visualize_html.py  test_3_html_to_pptx.py  test_4_run_all_tests.py
test-slide-edit-htmls/: Combined.html  initial-output.html  insert.html  notes.md
tests/: ACCESS_CONTROL_TESTS.md  __init__.py  conftest.py  pytest.ini  test_verification_persistence.py
(+840 files in other folders)
