[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-slide-generator"
dynamic = ["version"]
description = "AI-powered slide generation using Databricks"
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.20.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "mlflow>=3.6.0",  # 3.6+ required for make_judge API
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pandas>=2.0.0",
    "databricks-langchain>=0.1.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "databricks-sql-connector>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tinycss2>=1.3.0",
    "esprima>=4.0.0",  # JavaScript syntax validation for slide editing
    "python-multipart>=0.0.6",
    "langchain-community>=0.0.1",
    "langchain-text-splitters>=0.0.1",
    "litellm>=1.50.0",
    "python-pptx>=0.6.0",
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-html>=4.0.0",
    "pytest-metadata>=3.0.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "types-pyyaml>=6.0.0",
    # Build tools for deployment
    "build>=1.0.0",
    "setuptools-scm>=8.0.0",
    "twine>=6.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
write_to = "src/_version.py"
fallback_version = "0.1.0.dev0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (require Databricks connection)",
    "live: marks tests that require a live Databricks connection (excluded in CI with -m 'not live')",
    "slow: marks tests as slow running",
]

